// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfessorSummary Component renders professor info 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ui header display-header"
      >
        Nakul
         
        Verma
      </div>
      <div
        class="ui container"
      >
        <span>
          Courses: 
        </span>
        <span>
          <a
            href="/course/1"
          >
            <span
              class="display-header"
            >
              <span
                class="sc-AxjAm ekCnfx"
              >
                COMS 4771
              </span>
               
              Machine Learning
            </span>
          </a>
          , 
        </span>
        <span>
          <a
            href="/course/2"
          >
            <span
              class="display-header"
            >
              <span
                class="sc-AxjAm ekCnfx"
              >
                COMS 4774
              </span>
               
              Advanced Machine Learning
            </span>
          </a>
          
        </span>
      </div>
      <a
        href="/review"
      >
        <button
          class="ui yellow button"
        >
          WRITE A REVIEW FOR 
          Nakul
           
          Verma
        </button>
      </a>
    </div>
  </body>,
  "container": <div>
    <div
      class="ui header display-header"
    >
      Nakul
       
      Verma
    </div>
    <div
      class="ui container"
    >
      <span>
        Courses: 
      </span>
      <span>
        <a
          href="/course/1"
        >
          <span
            class="display-header"
          >
            <span
              class="sc-AxjAm ekCnfx"
            >
              COMS 4771
            </span>
             
            Machine Learning
          </span>
        </a>
        , 
      </span>
      <span>
        <a
          href="/course/2"
        >
          <span
            class="display-header"
          >
            <span
              class="sc-AxjAm ekCnfx"
            >
              COMS 4774
            </span>
             
            Advanced Machine Learning
          </span>
        </a>
        
      </span>
    </div>
    <a
      href="/review"
    >
      <button
        class="ui yellow button"
      >
        WRITE A REVIEW FOR 
        Nakul
         
        Verma
      </button>
    </a>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ProfessorSummary Component renders professor no courses 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ui header display-header"
      >
        Nakul
         
        Verma
      </div>
      <div
        class="ui container"
      >
        <span>
          Courses: 
        </span>
      </div>
      <a
        href="/review"
      >
        <button
          class="ui yellow button"
        >
          WRITE A REVIEW FOR 
          Nakul
           
          Verma
        </button>
      </a>
    </div>
  </body>,
  "container": <div>
    <div
      class="ui header display-header"
    >
      Nakul
       
      Verma
    </div>
    <div
      class="ui container"
    >
      <span>
        Courses: 
      </span>
    </div>
    <a
      href="/review"
    >
      <button
        class="ui yellow button"
      >
        WRITE A REVIEW FOR 
        Nakul
         
        Verma
      </button>
    </a>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
